--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ img {
   padding-top: 30rem;
   text-align: center;
   color: white;
-  font-size: 4em;
+  font-size: 5em;
   font-family: "Shrikhand", sans-serif;
   animation: cssload-breathe 3.05s ease infinite;
   animation-delay: 0.5s;
@@ -154,13 +154,20 @@ img {
 }
 
 .animForm > div {
-  width: 60px;
-  height: 60px;
+  width: 40px;
+  height: 30px;
   margin: 10px;
   background-color: #333;
-  border-radius: 50% 50% 50% 0;
+  /*border-radius: 50% 50% 50% 0; Gouttes*/ 
+  clip-path: polygon( 
+    25% 0%, 
+    75% 0%, 
+    100% 50%, 
+    75% 100%, 
+    25% 100%, 
+    0% 50% );
   display: inline-block;
-  animation: sk-dropdelay 1.4s infinite ease-in-out both;
+  animation: move-left-right 1.4s infinite ease-in-out both;
 }
 
 .animForm .drop1 {
@@ -207,6 +214,14 @@ img {
     opacity: 1;
     transform: translateX(0);
   }
+}
+
+/*###### ANIMATION LATERALE DROITE-GAUCHE ########*/
+@keyframes move-left-right {
+  0%   { transform: translateX(0) scale(0); }
+  40%  { transform: translateX(-20px) scale(1); }
+  80%  { transform: translateX(20px) scale(0); }
+  100% { transform: translateX(0) scale(0); }
 }
 
 .compo_menu_texte:hover .compo_menu_check_icon {
@@ -315,7 +330,7 @@ img {
 .section_picture .menu_2:hover,
 .section_picture .menu_3:hover,
 .section_picture .menu_4:hover {
-  box-shadow: 1px 3px 12px 4px #9356dc;
+  box-shadow: 1px 3px 12px 4px #99E2D0;
   border-radius: 25px;
 }
 
@@ -369,6 +384,39 @@ p {
   align-items: center;
   font-size: 2rem;
   height: 2rem;
+}
+
+.like {
+  display: flex;
+  align-content: normal;
+  align-items: flex-end;
+  justify-content: flex-end;
+  font-size: 3rem;
+  margin-bottom: 1rem;
+  padding-right: 1rem;
+}
+.like .far {
+  font-size: 3rem;
+  position: absolute;
+}
+.like .far:hover {
+  cursor: pointer;
+  z-index: 2;
+  animation: vide 1s forwards linear;
+}
+.like .far:hover + i {
+  opacity: 1;
+  transform: scale(1);
+  transition: 1s linear;
+}
+.like .fas {
+  position: absolute;
+  opacity: 0;
+  background: linear-gradient(to top, #ff79da, #9356dc);
+  -webkit-background-clip: text;
+  color: transparent;
+  transform-origin: bottom;
+  transform: scale(0);
 }
 
 .page_menu_titre .like {
