--- a/scss/index.css
+++ b/scss/index.css
@@ -167,10 +167,7 @@ img {
   right: 15px;
 }
 
-.menu_1,
-.menu_2,
-.menu_3,
-.menu_4 {
+.menu {
   height: 300px;
   width: 100%;
   padding: 0.5rem;
@@ -289,10 +286,7 @@ img {
   width: 100%;
 }
 
-.section_picture .menu_1,
-.section_picture .menu_2,
-.section_picture .menu_3,
-.section_picture .menu_4 {
+.section_picture .menu {
   position: relative;
   height: auto;
   width: 100%;
@@ -300,10 +294,7 @@ img {
   margin: 1rem;
 }
 
-.section_picture .menu_1:hover,
-.section_picture .menu_2:hover,
-.section_picture .menu_3:hover,
-.section_picture .menu_4:hover {
+.section_picture .menu:hover {
   box-shadow: 1px 3px 12px 4px #9356dc;
   border-radius: 25px;
 }
@@ -586,10 +577,7 @@ footer ul li a:hover {
     flex-wrap: wrap;
     gap: 2rem;
   }
-  .section_picture .menu_1,
-  .section_picture .menu_2,
-  .section_picture .menu_3,
-  .section_picture .menu_4 {
+  .section_picture .menu {
     width: 40%;
   }
   footer .logo_footer {
@@ -646,10 +634,7 @@ footer ul li a:hover {
     text-align: center;
     font-size: 4rem;
   }
-  .section_picture .menu_1,
-  .section_picture .menu_2,
-  .section_picture .menu_3,
-  .section_picture .menu_4 {
+  .section_picture .menu {
     width: 40%;
   }
   .image_menu {
