--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ html {
 body {
   font-family: Roboto, sans-serifxt-font;
   font-size: 1.6rem;
-  background-color: #f6f6f6;
+  background-color: #F6F6F6;
 }
 
 ul {
@@ -28,7 +28,7 @@ img {
 }
 
 .btn {
-  background: linear-gradient(to bottom, #ff79da, #9356dc);
+  background: linear-gradient(to bottom, #FF79DA, #9356DC);
   border: none;
   border-radius: 25px;
   color: white;
@@ -36,19 +36,19 @@ img {
   padding: 1.5rem;
   font-size: 1.6rem;
   width: 25rem;
-  box-shadow: 0px 6px 13px 0px #bebebe;
+  box-shadow: 0px 6px 13px 0px #BEBEBE;
 }
 
 .btn:hover {
   cursor: pointer;
-  box-shadow: 0 0 10px #6e6e6e;
+  box-shadow: 0 0 10px #6E6E6E;
   opacity: 0.8;
 }
 
 .btn_menu {
   width: 100%;
-  background-color: #f6f6f6;
-  box-shadow: 0px 6px 13px 0px #bebebe;
+  background-color: #F6F6F6;
+  box-shadow: 0px 6px 13px 0px #BEBEBE;
   font-size: 1.6rem;
   border-radius: 25px;
   padding: 0.5rem;
@@ -66,36 +66,36 @@ img {
   font-size: 1.7rem;
   padding: 3px 8px;
   margin: 5px;
-  background-color: #9356dc;
+  background-color: #9356DC;
   color: white;
   border-radius: 20px;
   width: 1rem;
   height: 1rem;
 }
 .btn_menu i {
-  color: #706f6f;
+  color: #706F6F;
   margin-right: 2.5rem;
   font-size: 2rem;
   padding: 2rem 0.2rem;
 }
 
 .btn_menu i :hover {
-  color: #9356dc;
+  color: #9356DC;
 }
 
 .btn_menu:hover {
-  background-color: #f5edff;
+  background-color: #F5EDFF;
 }
 .btn_menu:hover i {
-  color: #9356dc;
+  color: #9356DC;
 }
 
 .nouveau {
   align-content: flex-end;
   display: inline-block;
-  border: 1px solid #99e299;
-  background-color: #99e2d0;
-  color: #0a8d6d;
+  border: 1px solid #99E299;
+  background-color: #99E2D0;
+  color: #0A8D6D;
   border-radius: 2px;
   padding: 1px 10px;
   margin: 5px;
@@ -125,7 +125,7 @@ img {
 }
 .loader i {
   margin: 2rem;
-  color: #99e2d0;
+  color: #99E2D0;
 }
 .loader .loading {
   padding-top: 30rem;
@@ -153,29 +153,23 @@ img {
 
 .animForm > div {
   width: 40px;
-  height: 30px;
+  height: 40px;
   margin: 10px;
   background-color: #333;
   /*border-radius: 50% 50% 50% 0; Gouttes*/ 
-  clip-path: polygon( 
-    25% 0%, 
-    75% 0%, 
-    100% 50%, 
-    75% 100%, 
-    25% 100%, 
-    0% 50% );
+  clip-path: path("M24.5 3.5c-3.5 0-6.5 2.2-7.5 5.3C15.9 5.7 12.9 3.5 9.5 3.5 4.8 3.5 1 7.3 1 12c0 8.3 11.5 14.8 16 18.5 4.5-3.7 16-10.2 16-18.5 0-4.7-3.8-8.5-8.5-8.5z");
   display: inline-block;
   animation: move-left-right 1.4s infinite ease-in-out both;
 }
 
 .animForm .drop1 {
   animation-delay: -0.32s;
-  background-color: #ff79da;
+  background-color: #FF79DA;
 }
 
 .animForm .drop2 {
   animation-delay: -0.16s;
-  background-color: #9356dc;
+  background-color: #9356DC;
 }
 
 .animForm .drop3 {
@@ -311,6 +305,7 @@ img {
   flex-direction: column;
   align-items: center;
   padding-bottom: 7rem;
+  background-color: #FFFFFF;
 }
 
 .fonction .menu_fonction {
@@ -320,13 +315,14 @@ img {
 .fonction h1 {
   width: 100%;
   margin: 2rem 3rem;
-  padding-left: 1rem;
+  padding-left: 1.5rem;
   font-size: 2.5rem;
 }
 
 .logo {
   text-align: center;
   padding: 1rem;
+  background-color: #FFFFFF;
 }
 
 .logo a {
@@ -344,7 +340,7 @@ img {
 }
 
 .section_picture {
-  background-color: #f6f6f6;
+  background-color: #F6F6F6;
   display: flex;
   flex-direction: column;
   padding: 5rem 1rem;
@@ -356,6 +352,7 @@ img {
 .section_picture h2 {
   font-size: 3rem;
   width: 100%;
+  padding-left: 1rem;
 }
 
 .section_picture .menu {
@@ -406,7 +403,7 @@ p {
 
 .page_menu {
   position: relative;
-  background-color: #f6f6f6;
+  background-color: #F6F6F6;
   margin-top: -10rem;
   border-top-right-radius: 40px;
   border-top-left-radius: 40px;
@@ -450,7 +447,7 @@ p {
 .like .fas {
   position: absolute;
   opacity: 0;
-  background: linear-gradient(to top, #ff79da, #9356dc);
+  background: linear-gradient(to top, #FF79DA, #9356DC);
   -webkit-background-clip: text;
   color: transparent;
   transform-origin: bottom;
@@ -466,12 +463,12 @@ p {
 
 .compo {
   margin: 0.2rem;
-  background-color: #f6f6f6;
+  background-color: #F6F6F6;
 }
 
 .compo_menu {
   margin: 0.2rem;
-  background-color: #f6f6f6;
+  background-color: #F6F6F6;
   padding: 0.2rem;
   width: 95%;
 }
@@ -565,7 +562,7 @@ p {
 .commande {
   display: flex;
   justify-content: center;
-  background-color: #f6f6f6;
+  background-color: #F6F6F6;
 }
 
 form {
@@ -573,7 +570,7 @@ form {
   flex-direction: column;
   align-items: center;
   padding-bottom: 2rem;
-  background-color: #f6f6f6;
+  background-color: #F6F6F6;
   margin-bottom: 3rem;
 }
 
@@ -582,7 +579,7 @@ form i {
 }
 
 form .nav-container {
-  background-color: #eaeaea;
+  background-color: #EAEAEA;
   border-top: 1px;
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2) inset;
   display: flex;
@@ -663,12 +660,16 @@ footer ul li a {
 }
 
 footer ul li a:hover {
-  color: #ff79da;
+  color: #FF79DA;
 }
 
 /*##################################################### MOBILE & TABLET #####################################################*/
 
 @media (min-width: 768px) and (max-width: 1024px) {
+
+.btn_menu {
+  width: 90%;
+}
 
 .section_picture {
   flex-direction: row;
@@ -698,7 +699,7 @@ footer ul {
 @media (min-width: 1025px) {
   .menu_fonction {
     display: flex;
-    width: 90%;
+    width: 83%;
     flex-wrap: nowrap;
     justify-content: space-between;
     gap: 3rem;
@@ -771,3 +772,4 @@ footer ul {
 }
 
 }
+/*# sourceMappingURL=style.css.map */
