--- a/css/style.css
+++ b/css/style.css
@@ -256,6 +256,8 @@ img {
   opacity: 0;
   transform: translateY(10px);
   animation: fadeInUp 0.6s ease forwards;
+  width: 100%;
+  justify-items: center;
 }
 
 .compo_menu_entree {
@@ -391,6 +393,14 @@ h3 {
   font-weight: 900;
 }
 
+h4 {
+  margin: 0.2rem;
+  padding: 0.2rem;
+  font-size: 1.33rem;
+  font-weight: 700;
+  padding-bottom: 0.5rem;
+}
+
 p {
   margin: 0.2rem;
   padding-bottom: 0.3rem;
@@ -465,7 +475,7 @@ p {
   margin: 0.2rem;
   background-color: #F6F6F6;
   padding: 0.2rem;
-  width: 95%;
+  width: 100%;
 }
 
 .compo_menu:hover {
@@ -481,12 +491,11 @@ p {
 .compo_menu_titre {
   padding-bottom: 0.2rem;
   margin: 0.2rem 1rem;
-}
-
-.compo_menu hr {
-  border-top: 3px solid #99e2d0;
-  width: 4rem;
-  margin: 0.3rem 1rem;
+  text-decoration: underline;
+  text-decoration-line: underline;
+  text-decoration-color: #99E2D0; /* couleur */ 
+  text-decoration-thickness: 3px; /* épaisseur */
+  text-underline-offset: 8px; /* espace entre le texte et la ligne */
 }
 
 .compo_menu_texte {
@@ -633,7 +642,7 @@ footer {
 
 footer .logo_footer {
   color: white;
-  margin: 2rem;
+  /*margin: 2rem;*/
   font-family: Shrikhand, cursive;
 }
 
@@ -660,7 +669,7 @@ footer ul li a:hover {
 }
 
 /*##################################################### MOBILE & TABLET #####################################################*/
-
+/*### REVOIR LE CENTRAGE DES MENUS SUR CETTE PARTIE ###*/
 @media (min-width: 768px) and (max-width: 1024px) {
 
 .btn_menu {
@@ -713,10 +722,11 @@ footer ul {
 }
 
 .page_menu_titre {
-  justify-content: space-evenly;
+  justify-content: center;
   width: 100%;
-  padding-bottom: 3rem;
+  padding-bottom: 6rem;
   margin: 0;
+  gap: 6rem;
 }
 
 .compo {
@@ -737,6 +747,14 @@ footer ul {
   background-color: #F6F6F6;
   padding: 0.2rem;
   width: 100%;
+  justify-content: center;
+}
+
+.compo_menu_titre {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  font-size: 1.5rem;
   justify-content: center;
 }
 
@@ -781,7 +799,9 @@ footer ul {
 
 footer .logo_footer {
   text-align: center;
+  margin: 2rem;
 }
+
 
 footer ul {
   display: flex;
