--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,7 +11,7 @@ html {
 body {
   font-family: Roboto, sans-serifxt-font;
   font-size: 1.6rem;
-  background-color: #f6f6f6;
+  background-color: #F6F6F6;
 }
 
 ul {
@@ -28,7 +28,7 @@ img {
 }
 
 .btn {
-  background: linear-gradient(to bottom, #ff79da, #9356dc);
+  background: linear-gradient(to bottom, #FF79DA, #9356DC);
   border: none;
   border-radius: 25px;
   color: white;
@@ -36,19 +36,19 @@ img {
   padding: 1.5rem;
   font-size: 1.6rem;
   width: 25rem;
-  box-shadow: 0px 6px 13px 0px #bebebe;
+  box-shadow: 0px 6px 13px 0px #BEBEBE;
 }
 
 .btn:hover {
   cursor: pointer;
-  box-shadow: 0 0 10px #6e6e6e;
+  box-shadow: 0 0 10px #6E6E6E;
   opacity: 0.8;
 }
 
 .btn_menu {
   width: 100%;
-  background-color: #f6f6f6;
-  box-shadow: 0px 6px 13px 0px #bebebe;
+  background-color: #F6F6F6;
+  box-shadow: 0px 6px 13px 0px #BEBEBE;
   font-size: 1.6rem;
   border-radius: 25px;
   padding: 0.5rem;
@@ -66,36 +66,36 @@ img {
   font-size: 1.7rem;
   padding: 3px 8px;
   margin: 5px;
-  background-color: #9356dc;
+  background-color: #9356DC;
   color: white;
   border-radius: 20px;
   width: 1rem;
   height: 1rem;
 }
 .btn_menu i {
-  color: #706f6f;
+  color: #706F6F;
   margin-right: 2.5rem;
   font-size: 2rem;
   padding: 2rem 0.2rem;
 }
 
 .btn_menu i :hover {
-  color: #9356dc;
+  color: #9356DC;
 }
 
 .btn_menu:hover {
-  background-color: #f5edff;
+  background-color: #F5EDFF;
 }
 .btn_menu:hover i {
-  color: #9356dc;
+  color: #9356DC;
 }
 
 .nouveau {
   align-content: flex-end;
   display: inline-block;
-  border: 1px solid #99e299;
-  background-color: #99e2d0;
-  color: #0a8d6d;
+  border: 1px solid #99E299;
+  background-color: #99E299;
+  color: #0A8D6D;
   border-radius: 2px;
   padding: 1px 10px;
   margin: 5px;
@@ -106,7 +106,6 @@ img {
   top: 15px;
   right: 15px;
 }
-
 
 .menu {
   height: 300px;
@@ -194,7 +193,6 @@ img {
   font-size: 2.5rem;
 }
 
-
 .logo {
   text-align: center;
   padding: 1rem;
@@ -214,10 +212,8 @@ img {
   object-fit: cover;
 }
 
-
-
 .section_picture {
-  background-color: #f6f6f6;
+  background-color: #F6F6F6;
   display: flex;
   flex-direction: column;
   padding: 5rem 1rem;
@@ -240,7 +236,7 @@ img {
 }
 
 .section_picture .menu:hover {
-  box-shadow: 1px 3px 12px 4px #9356dc;
+  box-shadow: 1px 3px 12px 4px #9356DC;
   border-radius: 25px;
 }
 
@@ -279,7 +275,7 @@ p {
 
 .page_menu {
   position: relative;
-  background-color: #f6f6f6;
+  background-color: #F6F6F6;
   margin-top: -10rem;
   border-top-right-radius: 40px;
   border-top-left-radius: 40px;
@@ -305,12 +301,12 @@ p {
 
 .compo {
   margin: 0.2rem;
-  background-color: #f6f6f6;
+  background-color: #F6F6F6;
 }
 
 .compo_menu {
   margin: 0.2rem;
-  background-color: #f6f6f6;
+  background-color: #F6F6F6;
   padding: 0.2rem;
   width: 95%;
 }
@@ -330,12 +326,6 @@ p {
   margin: 0.2rem 1rem;
 }
 
-.compo_menu hr {
-  border-top: 3px solid #99e2d0;
-  width: 4rem;
-  margin: 0.3rem 1rem;
-}
-
 .compo_menu_texte {
   background-color: white;
   display: flex;
@@ -343,7 +333,7 @@ p {
   margin: 1rem;
   padding: 0.8rem;
   border-radius: 20px;
-  box-shadow: 0 0 10px #d4d4d4;
+  box-shadow: 0 0 10px #D4D4D4;
   width: 100%;
   white-space: nowrap;
   overflow: hidden;
@@ -385,7 +375,7 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #99e2d0;
+  background-color: #99E299;
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
   width: 7rem;
@@ -398,13 +388,13 @@ p {
   border-radius: 25px;
   background-color: white;
   padding: 0.3rem;
-  color: #99e2d0;
+  color: #99E299;
 }
 
 .commande {
   display: flex;
   justify-content: center;
-  background-color: #f6f6f6;
+  background-color: #F6F6F6;
 }
 
 form {
@@ -412,7 +402,7 @@ form {
   flex-direction: column;
   align-items: center;
   padding-bottom: 2rem;
-  background-color: #f6f6f6;
+  background-color: #F6F6F6;
   margin-bottom: 3rem;
 }
 
@@ -421,7 +411,7 @@ form i {
 }
 
 form .nav-container {
-  background-color: #eaeaea;
+  background-color: #EAEAEA;
   border-top: 1px;
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2) inset;
   display: flex;
@@ -467,10 +457,6 @@ form .search::placeholder {
   margin-bottom: 2rem;
 }
 
-
-
-
-
 /*##################################################### FOOTER #####################################################*/
 footer {
   display: flex;
@@ -491,8 +477,6 @@ footer ul {
   padding-bottom: 3rem;
 }
 
-
-
 footer ul li {
   margin: 0.5rem 2rem;
 }
@@ -508,7 +492,7 @@ footer ul li a {
 }
 
 footer ul li a:hover {
-  color: #ff79da;
+  color: #FF79DA;
 }
 
 /*##################################################### MOBILE & TABLET #####################################################*/
