--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,7 +11,7 @@ html {
 body {
   font-family: Roboto, sans-serifxt-font;
   font-size: 1.6rem;
-  background-color: #F6F6F6;
+  /*background-color: #F6F6F6;*/
 }
 
 ul {
@@ -94,7 +94,7 @@ img {
   align-content: flex-end;
   display: inline-block;
   border: 1px solid #99E299;
-  background-color: #99E299;
+  background-color: #99E2D0;
   color: #0A8D6D;
   border-radius: 2px;
   padding: 1px 10px;
@@ -107,10 +107,81 @@ img {
   right: 15px;
 }
 
+
 .menu {
   height: 300px;
   width: 100%;
   padding: 0.5rem;
+}
+
+.loader {
+  background: linear-gradient(#9356DC, #99E2D0);
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  z-index: 99;
+  animation: loader 6s;
+  animation-fill-mode: both;
+}
+.loader i {
+  margin: 2rem;
+  color: #99E2D0;
+}
+.loader .loading {
+  padding-top: 30rem;
+  text-align: center;
+  color: white;
+  font-size: 5em;
+  font-family: "Shrikhand", sans-serif;
+  animation: cssload-breathe 3.05s ease infinite;
+  animation-delay: 0.5s;
+}
+
+@keyframes loader {
+  0% {
+    visibility: visible;
+  }
+  100% {
+    visibility: hidden;
+  }
+}
+.animForm {
+  margin: 100px auto 0;
+  width: 170px;
+  text-align: center;
+}
+
+.animForm > div {
+  width: 3.5rem;
+  height: 3.5rem;
+  margin: 0.625rem;
+  background-color: #333;
+  border-radius: 50% 50% 50% 50%; /*Gouttes*/
+  display: inline-block;
+  animation: move-left-right 1.4s infinite ease-in-out both;
+}
+
+.animForm .drop1 {
+  animation-delay: -0.32s;
+  background-color: #FF79DA;
+}
+
+.animForm .drop2 {
+  animation-delay: -0.16s;
+  background-color: #9356DC;
+}
+
+.animForm .drop3 {
+  background-color: #99E2D0;
+}
+
+@keyframes sk-dropdelay {
+  0%, 80%, 100% {
+    transform: scale(0);
+  }
+  40% {
+    transform: scale(1);
+  }
 }
 
 @keyframes vide {
@@ -134,6 +205,14 @@ img {
     opacity: 1;
     transform: translateX(0);
   }
+}
+
+/*###### ANIMATION LATERALE DROITE-GAUCHE ########*/
+@keyframes move-left-right {
+  0%   { transform: translateX(0) scale(0); }
+  40%  { transform: translateX(-20px) scale(1); }
+  80%  { transform: translateX(20px) scale(0); }
+  100% { transform: translateX(0) scale(0); }
 }
 
 .compo_menu_texte:hover .compo_menu_check_icon {
@@ -169,6 +248,48 @@ img {
   animation: apparition 2s 0.6s backwards;
 }
 
+/*######### ANIMATION DES MENUS FADING ET MOUVEMENT VERS LE HAUT #########*/
+.compo_menu_entree,
+.compo_menu_plat,
+.compo_menu_dessert {
+  opacity: 0;
+  transform: translateY(10px);
+  animation: fadeInUp 0.6s ease forwards;
+  width: 100%;
+  justify-items: center;
+}
+
+.compo_menu_entree {
+  animation-delay: 0.4s;
+}
+
+.compo_menu_plat {
+  animation-delay: 0.8s;
+}
+
+.compo_menu_dessert {
+  animation-delay: 1.2s;
+}
+
+@keyframes fadeInUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+/*########### ANIMATION AVEC UN LEGER ZOOM ###########*/ 
+
+@keyframes fadeInUp { 
+  from { 
+    opacity: 0; 
+    transform: translateY(40px) scale(0.98);  
+  } 
+  to { 
+    opacity: 1; 
+    transform: translateY(0) scale(1); 
+  }
+}
+
 .logo {
   display: flex;
   justify-content: center;
@@ -180,6 +301,7 @@ img {
   flex-direction: column;
   align-items: center;
   padding-bottom: 7rem;
+  background-color: #FFFFFF;
 }
 
 .fonction .menu_fonction {
@@ -189,13 +311,14 @@ img {
 .fonction h1 {
   width: 100%;
   margin: 2rem 3rem;
-  padding-left: 1rem;
+  padding-left: 1.5rem;
   font-size: 2.5rem;
 }
 
 .logo {
   text-align: center;
   padding: 1rem;
+  background-color: #FFFFFF;
 }
 
 .logo a {
@@ -225,6 +348,7 @@ img {
 .section_picture h2 {
   font-size: 3rem;
   width: 100%;
+  padding-left: 1rem;
 }
 
 .section_picture .menu {
@@ -236,7 +360,7 @@ img {
 }
 
 .section_picture .menu:hover {
-  box-shadow: 1px 3px 12px 4px #9356DC;
+  box-shadow: 1px 3px 12px 4px #99E2D0;
   border-radius: 25px;
 }
 
@@ -268,6 +392,19 @@ h3 {
   font-weight: 900;
 }
 
+h2 {
+  margin: 0.2rem;
+  padding: 0.2rem;
+  font-size: 1.33rem;
+  font-weight: 700;
+  padding-bottom: 0.5rem;
+  text-decoration: underline;
+  text-decoration-line: underline;
+  text-decoration-color: #99E2D0; /* Couleur */ 
+  text-decoration-thickness: 3px; /* Epaisseur */
+  text-underline-offset: 8px; /* Espace entre le texte et la ligne */
+}
+
 p {
   margin: 0.2rem;
   padding-bottom: 0.3rem;
@@ -283,13 +420,47 @@ p {
 
 .page_menu_titre {
   display: flex;
-  padding: 5rem 0rem;
-  margin: 1.2rem;
+  padding: 5rem 6rem;
+  margin: -3.1rem;
   font-family: Shrikhand, cursive;
   justify-content: space-between;
   align-items: center;
-  font-size: 2rem;
+  font-size: 1.75rem;
   height: 2rem;
+}
+
+/*######### LIKE ANIMATION #########*/
+.like {
+  display: flex;
+  align-content: normal;
+  align-items: flex-end;
+  justify-content: flex-end;
+  font-size: 3rem;
+  margin-bottom: 1rem;
+  padding-right: 1rem;
+}
+.like .far {
+  font-size: 3rem;
+  position: absolute;
+}
+.like .far:hover {
+  cursor: pointer;
+  z-index: 2;
+  animation: vide 1s forwards linear;
+}
+.like .far:hover + i {
+  opacity: 1;
+  transform: scale(1);
+  transition: 1s linear;
+}
+.like .fas {
+  position: absolute;
+  opacity: 0;
+  background: linear-gradient(to top, #FF79DA, #9356DC);
+  background-clip: text;
+  color: transparent;
+  transform-origin: bottom;
+  transform: scale(0);
 }
 
 .page_menu_titre .like {
@@ -305,10 +476,10 @@ p {
 }
 
 .compo_menu {
-  margin: 0.2rem;
+  margin: -0.2rem;
   background-color: #F6F6F6;
   padding: 0.2rem;
-  width: 95%;
+  width: 100%;
 }
 
 .compo_menu:hover {
@@ -324,6 +495,12 @@ p {
 .compo_menu_titre {
   padding-bottom: 0.2rem;
   margin: 0.2rem 1rem;
+/*  text-decoration: underline;
+  text-decoration-line: underline;
+  text-decoration-color: #99E2D0; /* Couleur */ 
+/*  text-decoration-thickness: 3px; /* Epaisseur */
+/*  text-underline-offset: 8px; /* Espace entre le texte et la ligne */
+  width: 95%;
 }
 
 .compo_menu_texte {
@@ -337,6 +514,7 @@ p {
   width: 100%;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 695px;
 }
 
 .compo_menu_choix {
@@ -375,7 +553,7 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #99E299;
+  background-color: #99E2D0;
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
   width: 7rem;
@@ -388,7 +566,7 @@ p {
   border-radius: 25px;
   background-color: white;
   padding: 0.3rem;
-  color: #99E299;
+  color: #99E2D0;
 }
 
 .commande {
@@ -424,29 +602,29 @@ form .nav-container {
 }
 
 form .search {
-   display: flex;
-   border: none;
-   background-color: #EAEAEA;
-   height: 1.5rem;
-   height: 3rem;
+  display: flex;
+  border: none;
+  background-color: #EAEAEA;
+  height: 1.5rem;
+  height: 3rem;
 }
 
 form .search::placeholder {
-   font-size: 2rem;
-   color: black;
-   padding-left: 1rem;
-   font-weight: 700;
-   height: auto;
-   width: 100%;
+  font-size: 2rem;
+  color: black;
+  padding-left: 1rem;
+  font-weight: 700;
+  height: auto;
+  width: 100%;
 }
 
 .nav_container_text {
-   flex-direction: column;
-   justify-content: center;
-   text-align: center;
-   padding: 3rem 1rem;
-   background-color: #F6F6F6;
-   width: 100%;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  padding: 3rem 1rem;
+  background-color: #F6F6F6;
+  width: 100%;
 }
 
 .nav_container_text h1 {
@@ -461,7 +639,7 @@ form .search::placeholder {
 footer {
   display: flex;
   flex-direction: column;
-  padding-top: 1rem;
+  padding-top: 5rem;
   background-color: #353535;
   color: white;
   width: 100%;
@@ -469,7 +647,7 @@ footer {
 
 footer .logo_footer {
   color: white;
-  margin: 2rem;
+  /*margin: 2rem;*/
   font-family: Shrikhand, cursive;
 }
 
@@ -496,28 +674,33 @@ footer ul li a:hover {
 }
 
 /*##################################################### MOBILE & TABLET #####################################################*/
-
+/*### REVOIR LE CENTRAGE DES MENUS SUR CETTE PARTIE ###*/
 @media (min-width: 768px) and (max-width: 1024px) {
 
-  .section_picture {
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 2rem;
-  }
+.btn_menu {
+  width: 90%;
+}
 
-   .section_picture .menu {
-    width: 40%;
-  }
+.section_picture {
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
 
 
-   footer .logo_footer {
-    text-align: center;
-  }
+.section_picture .menu {
+  width: 40%;
+}
 
-  footer ul {
-    display: flex;
-    justify-content: center;
-  }
+
+footer .logo_footer {
+  text-align: center;
+}
+
+footer ul {
+  display: flex;
+  justify-content: center;
+}
 
 }
 
@@ -525,76 +708,114 @@ footer ul li a:hover {
 
 @media (min-width: 1025px) {
   .menu_fonction {
-      display: flex;
-      width: 90%;
-      flex-wrap: nowrap;
-      justify-content: space-between;
-      gap: 3rem;
-      white-space: nowrap;
-   }
+    display: flex;
+    width: 83%;
+    /*flex-wrap: nowrap;*/
+    justify-content: space-between;
+    gap: 3rem;
+    white-space: nowrap;
+  }
 
   .page_menu {
-      width: 100%;
+    display: flex;
+    justify-self: center;
+    width: 100%;
+    max-width: 1055px;
   }
 
   .page_menu_titre {
-      padding: 8rem 0rem;
+    padding: 8rem 0rem;
   }
 
   .page_menu_titre {
-      justify-content: space-evenly;
-      width: 100%;
-      padding-bottom: 3rem;
-      margin: 0;
-   }
+    justify-content: center;
+    width: 100%;
+    padding-bottom: 6rem;
+    margin: 0;
+    gap: 6rem;
+  }
 
   .compo {
-      display: flex;
-      gap: 1rem;
-      justify-content: space-between;
-   }
+    display: flex;
+    flex-direction: column;
+    /*flex-wrap: wrap;*/
+    /*gap: 1rem;*/
+    justify-self: center;
+    background-color: #FFFFFF;
+    margin: 0rem;
+    width: 100%;
+    max-width: 1055px;
+  }
+
+  .compo_menu {
+    display: flex;
+    margin: 0.0rem;
+    background-color: #F6F6F6;
+    padding: 0.2rem;
+    width: 100%;
+    justify-content: center;
+  }
+
+  .compo_menu_titre {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    font-size: 1.5rem;
+    justify-content: center;
+  }
 
   .compo_menu_texte {
-      width: 380px;
-      font-size: 1.3rem;
+    width: 100%;
+    font-size: 1.3rem;
+    max-width: 634px;
   }
 
   .compo_menu_choix {
-      font-size: 1.6rem;
+    font-size: 1.6rem;
   }
 
   .fonction h1 {
-      text-align: center;
-   }
+    text-align: center;
+  }
 
   .section_picture {
-      flex-direction: row;
-      flex-wrap: wrap;
-      gap: 3rem;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 3rem;
   }
 
-   .section_picture h2 {
-      text-align: center;
-      font-size: 4rem;
+  .section_picture h2 {
+    text-align: center;
+    padding: 0.5rem;
+    font-size: 2.5rem;
   }
 
-   .section_picture .menu {
-      width: 40%;
+  .section_picture .menu {
+    width: 40%;
   }
 
   .image_menu {
-      height: 500px;
+    height: 500px;
+  }
+
+  .commande {
+    width: 100%;
+    max-width: 1055px;
+    justify-self: center;
   }
 
   footer .logo_footer {
-      text-align: center;
+    text-align: center;
+    margin: 2rem;
   }
 
+
   footer ul {
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      justify-content: space-evenly;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-end;
   }
 
 }
+/*# sourceMappingURL=style.css.map */
