--- a/scss/style.css
+++ b/scss/style.css
@@ -11,7 +11,6 @@ html {
 body {
   font-family: Roboto, sans-serifxt-font;
   font-size: 1.6rem;
-  /*background-color: #F6F6F6;*/
 }
 
 ul {
@@ -115,6 +114,7 @@ img {
   padding: 0.5rem;
 }
 
+/*######### LOADER & ANIMATION #########*/
 .loader {
   background: linear-gradient(#9356DC, #99E2D0);
   position: fixed;
@@ -159,7 +159,7 @@ img {
   height: 3.5rem;
   margin: 0.625rem;
   background-color: #333;
-  border-radius: 50% 50% 50% 50%; /*Gouttes*/
+  border-radius: 50% 50% 50% 50%; /*Boules*/
   display: inline-block;
   animation: move-left-right 1.4s infinite ease-in-out both;
 }
@@ -295,6 +295,7 @@ img {
     transform: translateY(0) scale(1);
   }
 }
+/*####################################################*/
 .logo {
   display: flex;
   justify-content: center;
@@ -392,13 +393,6 @@ img {
   z-index: 0;
 }
 
-h3 {
-  margin: 0.2rem;
-  padding: 0.2rem;
-  font-size: 2rem;
-  font-weight: 900;
-}
-
 h2 {
   margin: 0.2rem;
   padding: 0.2rem;
@@ -410,6 +404,13 @@ h2 {
   text-decoration-color: #99E2D0; /* Couleur */
   text-decoration-thickness: 3px; /* Epaisseur */
   text-underline-offset: 8px; /* Espace entre le texte et la ligne */
+}
+
+h3 {
+  margin: 0.2rem;
+  padding: 0.2rem;
+  font-size: 2rem;
+  font-weight: 900;
 }
 
 p {
@@ -507,11 +508,6 @@ p {
 .compo_menu_titre {
   padding-bottom: 0.2rem;
   margin: 0.2rem 1rem;
-  /*  text-decoration: underline;
-    text-decoration-line: underline;
-    text-decoration-color: #99E2D0; /* Couleur */
-  /*  text-decoration-thickness: 3px; /* Epaisseur */
-  /*  text-underline-offset: 8px; /* Espace entre le texte et la ligne */
   width: 95%;
 }
 
@@ -695,7 +691,6 @@ footer ul li a:hover {
 }
 
 /*##################################################### MOBILE & TABLET #####################################################*/
-/*### REVOIR LE CENTRAGE DES MENUS SUR CETTE PARTIE ###*/
 @media (min-width: 768px) and (max-width: 1024px) {
   .btn_menu {
     width: 90%;
@@ -721,20 +716,22 @@ footer ul li a:hover {
   .menu_fonction {
     display: flex;
     width: 83%;
-    /*flex-wrap: nowrap;*/
     justify-content: space-between;
     gap: 3rem;
     white-space: nowrap;
   }
+
   .page_menu {
     display: flex;
     justify-self: center;
     width: 100%;
     max-width: 1055px;
   }
+
   .page_menu_titre {
     padding: 8rem 0rem;
   }
+
   .page_menu_titre {
     justify-content: center;
     width: 100%;
@@ -742,17 +739,17 @@ footer ul li a:hover {
     margin: 0;
     gap: 6rem;
   }
+
   .compo {
     display: flex;
     flex-direction: column;
-    /*flex-wrap: wrap;*/
-    /*gap: 1rem;*/
     justify-self: center;
     background-color: #FFFFFF;
     margin: 0rem;
     width: 100%;
     max-width: 1055px;
   }
+
   .compo_menu {
     display: flex;
     margin: 0rem;
@@ -761,6 +758,7 @@ footer ul li a:hover {
     width: 100%;
     justify-content: center;
   }
+
   .compo_menu_titre {
     width: 60%;
     display: flex;
@@ -768,42 +766,52 @@ footer ul li a:hover {
     font-size: 1.5rem;
     justify-content: center;
   }
+
   .compo_menu_texte {
     width: 100%;
     font-size: 1.3rem;
     max-width: 634px;
   }
+
   .compo_menu_choix {
     font-size: 1.6rem;
   }
+
   .fonction h1 {
     text-align: center;
   }
+
   .section_picture {
     flex-direction: row;
     flex-wrap: wrap;
     gap: 3rem;
   }
+
   .section_picture h2 {
     text-align: center;
     padding: 0.5rem;
     font-size: 2.5rem;
   }
+
   .section_picture .menu {
     width: 40%;
   }
+
   .image_menu {
     height: 500px;
   }
+
   .commande {
     width: 100%;
     max-width: 1055px;
     justify-self: center;
   }
+
   footer .logo_footer {
     text-align: center;
     margin: 2rem;
   }
+
   footer ul {
     display: flex;
     flex-direction: row;
